# burocrate

./: Cargo.toml
.github/workflows/: audit.yml  ci.yml  commited.yml
src/: main.rs  parsio.rs  reservation.rs  task.rs  todoist.rs
