[package]
name = "burocrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
date_time_parser = "0.2.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.166", features=["derive"] }
serde_json = "1.0.100"
string-builder = "0.2.0"
